--- a/Kawaraya.html
+++ b/Kawaraya.html
@@ -130,7 +130,7 @@
             </ul>
         </nav>
         <div class="language-switch">
-            <a href="かわらや.html">日本語</a>
+            <a href="index.html">日本語</a>
         </div>
     </header>
     
